Estimator_MEKF/app_hello_rs_estimator/src/estimator_bindings.rs

#[repr(C)]
#[derive(Copy, Clone)]
pub union quaternion_s__bindgen_ty_1 {
    pub __bindgen_anon_1: quaternion_s__bindgen_ty_1__bindgen_ty_1,
    pub __bindgen_anon_2: quaternion_s__bindgen_ty_1__bindgen_ty_2,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct quaternion_s__bindgen_ty_1__bindgen_ty_1 {
    pub q0: f32,
    pub q1: f32,
    pub q2: f32,
    pub q3: f32,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct quaternion_s__bindgen_ty_1__bindgen_ty_2 {
    pub x: f32,
    pub y: f32,
    pub z: f32,
    pub w: f32,
}
pub type quaternion_t = quaternion_s;
pub const measurementSource_t_MeasurementSourceLocationService: measurementSource_t = 0;
pub const measurementSource_t_MeasurementSourceLighthouse: measurementSource_t = 0;
pub type measurementSource_t = u32;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct tdoaMeasurement_s {
    pub __bindgen_anon_1: tdoaMeasurement_s__bindgen_ty_1,
    pub __bindgen_anon_2: tdoaMeasurement_s__bindgen_ty_2,
    pub distanceDiff: f32,
    pub stdDev: f32,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union tdoaMeasurement_s__bindgen_ty_1 {
    pub anchorPositions: [point_t; 2usize],
    pub __bindgen_anon_1: tdoaMeasurement_s__bindgen_ty_1__bindgen_ty_1,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct tdoaMeasurement_s__bindgen_ty_1__bindgen_ty_1 {
    pub anchorPositionA: point_t,
    pub anchorPositionB: point_t,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union tdoaMeasurement_s__bindgen_ty_2 {
    pub anchorIds: [u8; 2usize],
    pub __bindgen_anon_1: tdoaMeasurement_s__bindgen_ty_2__bindgen_ty_1,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct tdoaMeasurement_s__bindgen_ty_2__bindgen_ty_1 {
    pub anchorIdA: u8,
    pub anchorIdB: u8,
}
pub type tdoaMeasurement_t = tdoaMeasurement_s;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct baro_s {
    pub pressure: f32,
    pub temperature: f32,
    pub asl: f32,
}
pub type baro_t = baro_s;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct positionMeasurement_s {
    pub __bindgen_anon_1: positionMeasurement_s__bindgen_ty_1,
    pub stdDev: f32,
    pub source: measurementSource_t,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union positionMeasurement_s__bindgen_ty_1 {
    pub __bindgen_anon_1: positionMeasurement_s__bindgen_ty_1__bindgen_ty_1,
    pub pos: [f32; 3usize],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct positionMeasurement_s__bindgen_ty_1__bindgen_ty_1 {
    pub x: f32,
    pub y: f32,
    pub z: f32,
}
pub type positionMeasurement_t = positionMeasurement_s;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct poseMeasurement_s {
    pub __bindgen_anon_1: poseMeasurement_s__bindgen_ty_1,
    pub quat: quaternion_t,
    pub stdDevPos: f32,
    pub stdDevQuat: f32,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union poseMeasurement_s__bindgen_ty_1 {
    pub __bindgen_anon_1: poseMeasurement_s__bindgen_ty_1__bindgen_ty_1,
    pub pos: [f32; 3usize],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct poseMeasurement_s__bindgen_ty_1__bindgen_ty_1 {
    pub x: f32,
    pub y: f32,
    pub z: f32,
}
pub type poseMeasurement_t = poseMeasurement_s;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct distanceMeasurement_s {
    pub __bindgen_anon_1: distanceMeasurement_s__bindgen_ty_1,
    pub anchorId: u8,
    pub distance: f32,
    pub stdDev: f32,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union distanceMeasurement_s__bindgen_ty_1 {
    pub __bindgen_anon_1: distanceMeasurement_s__bindgen_ty_1__bindgen_ty_1,
    pub pos: [f32; 3usize],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct distanceMeasurement_s__bindgen_ty_1__bindgen_ty_1 {
    pub x: f32,
    pub y: f32,
    pub z: f32,
}
pub type distanceMeasurement_t = distanceMeasurement_s;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct zDistance_s {
    pub timestamp: u32,
    pub distance: f32,
}
pub type zDistance_t = zDistance_s;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct sensorData_s {
    pub acc: Axis3f,
    pub gyro: Axis3f,
    pub mag: Axis3f,
    pub baro: baro_t,
    pub interruptTimestamp: u64,
}
pub type sensorData_t = sensorData_s;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct state_s {
    pub attitude: attitude_t,
    pub attitudeQuaternion: quaternion_t,
    pub position: point_t,
    pub velocity: velocity_t,
    pub acc: acc_t,
}
pub type state_t = state_s;
pub const control_mode_e_controlModeLegacy: control_mode_e = 0;
pub const control_mode_e_controlModeForceTorque: control_mode_e = 1;
pub const control_mode_e_controlModeForce: control_mode_e = 2;
pub type control_mode_e = u32;
pub use self::control_mode_e as control_mode_t;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct control_s {
    pub __bindgen_anon_1: control_s__bindgen_ty_1,
    pub controlMode: control_mode_t,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union control_s__bindgen_ty_1 {
    pub __bindgen_anon_1: control_s__bindgen_ty_1__bindgen_ty_1,
    pub __bindgen_anon_2: control_s__bindgen_ty_1__bindgen_ty_2,
    pub normalizedForces: [f32; 4usize],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct control_s__bindgen_ty_1__bindgen_ty_1 {
    pub roll: i16,
    pub pitch: i16,
    pub yaw: i16,
    pub thrust: f32,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct control_s__bindgen_ty_1__bindgen_ty_2 {
    pub thrustSi: f32,
    pub __bindgen_anon_1: control_s__bindgen_ty_1__bindgen_ty_2__bindgen_ty_1,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union control_s__bindgen_ty_1__bindgen_ty_2__bindgen_ty_1 {
    pub torque: [f32; 3usize],
    pub __bindgen_anon_1: control_s__bindgen_ty_1__bindgen_ty_2__bindgen_ty_1__bindgen_ty_1,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct control_s__bindgen_ty_1__bindgen_ty_2__bindgen_ty_1__bindgen_ty_1 {
    pub torqueX: f32,
    pub torqueY: f32,
    pub torqueZ: f32,
}
pub type control_t = control_s;
#[repr(C)]
#[derive(Copy, Clone)]
pub union motors_thrust_uncapped_t {
    pub list: [i32; 4usize],
    pub motors: motors_thrust_uncapped_t__bindgen_ty_1,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct motors_thrust_uncapped_t__bindgen_ty_1 {
    pub m1: i32,
    pub m2: i32,
    pub m3: i32,
    pub m4: i32,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union motors_thrust_pwm_t {
    pub list: [u16; 4usize],
    pub motors: motors_thrust_pwm_t__bindgen_ty_1,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct motors_thrust_pwm_t__bindgen_ty_1 {
    pub m1: u16,
    pub m2: u16,
    pub m3: u16,
    pub m4: u16,
}
pub const mode_e_modeDisable: mode_e = 0;
pub const mode_e_modeAbs: mode_e = 1;
pub const mode_e_modeVelocity: mode_e = 2;
pub type mode_e = u32;
pub use self::mode_e as stab_mode_t;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct setpoint_s {
    pub timestamp: u32,
    pub attitude: attitude_t,
    pub attitudeRate: attitude_t,
    pub attitudeQuaternion: quaternion_t,
    pub thrust: f32,
    pub position: point_t,
    pub velocity: velocity_t,
    pub acceleration: acc_t,
    pub jerk: jerk_t,
    pub velocity_body: bool,
    pub mode: setpoint_s__bindgen_ty_1,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct setpoint_s__bindgen_ty_1 {
    pub x: stab_mode_t,
    pub y: stab_mode_t,
    pub z: stab_mode_t,
    pub roll: stab_mode_t,
    pub pitch: stab_mode_t,
    pub yaw: stab_mode_t,
    pub quat: stab_mode_t,
}
pub type setpoint_t = setpoint_s;
#[doc = " Estimate of position"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct estimate_s {
    pub timestamp: u32,
    pub position: point_t,
}
#[doc = " Estimate of position"]
pub type estimate_t = estimate_s;
#[doc = " Setpoint for althold"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct setpointZ_s {
    pub z: f32,
    pub isUpdate: bool,
}
#[doc = " Setpoint for althold"]
pub type setpointZ_t = setpointZ_s;
#[doc = " Flow measurement"]
#[repr(C)]
#[derive(Copy, Clone)]
pub struct flowMeasurement_s {
    pub timestamp: u32,
    pub __bindgen_anon_1: flowMeasurement_s__bindgen_ty_1,
    pub stdDevX: f32,
    pub stdDevY: f32,
    pub dt: f32,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union flowMeasurement_s__bindgen_ty_1 {
    pub __bindgen_anon_1: flowMeasurement_s__bindgen_ty_1__bindgen_ty_1,
    pub dpixel: [f32; 2usize],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct flowMeasurement_s__bindgen_ty_1__bindgen_ty_1 {
    pub dpixelx: f32,
    pub dpixely: f32,
}
#[doc = " Flow measurement"]
pub type flowMeasurement_t = flowMeasurement_s;
#[doc = " TOF measurement"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct tofMeasurement_s {
    pub timestamp: u32,
    pub distance: f32,
    pub stdDev: f32,
}
#[doc = " TOF measurement"]
pub type tofMeasurement_t = tofMeasurement_s;
#[doc = " Absolute height measurement"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct heightMeasurement_s {
    pub timestamp: u32,
    pub height: f32,
    pub stdDev: f32,
}
#[doc = " Absolute height measurement"]
pub type heightMeasurement_t = heightMeasurement_s;
#[doc = " Yaw error measurement"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct yawErrorMeasurement_t {
    pub timestamp: u32,
    pub yawError: f32,
    pub stdDev: f32,
}
#[doc = " Sweep angle measurement"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sweepAngleMeasurement_t {
    pub timestamp: u32,
    pub sensorPos: *const vec3d,
    pub rotorPos: *const vec3d,
    pub rotorRot: *const mat3d,
    pub rotorRotInv: *const mat3d,
    pub sensorId: u8,
    pub baseStationId: u8,
    pub sweepId: u8,
    pub t: f32,
    pub measuredSweepAngle: f32,
    pub stdDev: f32,
}
#[doc = " gyroscope measurement"]
#[repr(C)]
#[derive(Copy, Clone)]
pub struct gyroscopeMeasurement_t {
    pub gyro: Axis3f,
}
#[doc = " accelerometer measurement"]
#[repr(C)]
#[derive(Copy, Clone)]
pub struct accelerationMeasurement_t {
    pub acc: Axis3f,
}
#[doc = " barometer measurement"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct barometerMeasurement_t {
    pub baro: baro_t,
}
pub const StateEstimatorType_StateEstimatorTypeAutoSelect: StateEstimatorType = 0;
pub const StateEstimatorType_StateEstimatorTypeComplementary: StateEstimatorType = 1;
pub const StateEstimatorType_StateEstimatorTypeKalman: StateEstimatorType = 2;
pub const StateEstimatorType_StateEstimatorType_COUNT: StateEstimatorType = 3;
pub type StateEstimatorType = u32;
pub const MeasurementType_MeasurementTypeTDOA: MeasurementType = 0;
pub const MeasurementType_MeasurementTypePosition: MeasurementType = 1;
pub const MeasurementType_MeasurementTypePose: MeasurementType = 2;
pub const MeasurementType_MeasurementTypeDistance: MeasurementType = 3;
pub const MeasurementType_MeasurementTypeTOF: MeasurementType = 4;
pub const MeasurementType_MeasurementTypeAbsoluteHeight: MeasurementType = 5;
pub const MeasurementType_MeasurementTypeFlow: MeasurementType = 6;
pub const MeasurementType_MeasurementTypeYawError: MeasurementType = 7;
pub const MeasurementType_MeasurementTypeSweepAngle: MeasurementType = 8;
pub const MeasurementType_MeasurementTypeGyroscope: MeasurementType = 9;
pub const MeasurementType_MeasurementTypeAcceleration: MeasurementType = 10;
pub const MeasurementType_MeasurementTypeBarometer: MeasurementType = 11;
pub type MeasurementType = u32;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct measurement_t {
    pub type_: MeasurementType,
    pub data: measurement_t__bindgen_ty_1,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union measurement_t__bindgen_ty_1 {
    pub tdoa: tdoaMeasurement_t,
    pub position: positionMeasurement_t,
    pub pose: poseMeasurement_t,
    pub distance: distanceMeasurement_t,
    pub tof: tofMeasurement_t,
    pub height: heightMeasurement_t,
    pub flow: flowMeasurement_t,
    pub yawError: yawErrorMeasurement_t,
    pub sweepAngle: sweepAngleMeasurement_t,
    pub gyroscope: gyroscopeMeasurement_t,
    pub acceleration: accelerationMeasurement_t,
    pub barometer: barometerMeasurement_t,
}
extern "C" {
    pub fn stateEstimatorInit(estimator: StateEstimatorType);
}
extern "C" {
    pub fn stateEstimatorTest() -> bool;
}
extern "C" {
    pub fn stateEstimatorSwitchTo(estimator: StateEstimatorType);
}
